...
    <group >
        <item
            android:title="My Profile"
            android:id="@+id/menu_profile"
            android:onClick="onOptionsItemSelected"/>
        <item
            android:title="Security"
            android:id="@+id/menu_security"
            android:onClick="onOptionsItemSelected"/>
        <item
            android:title="Settings"
            android:id="@+id/menu_settings"
            android:onClick="onOptionsItemSelected"/>
...
